0.13 2013-04-07
        - Allow interpolation of arbitrary urls.
        - Small improvement to documentation.
	- Improved test suite.

0.12 2013-03-22
        - Made warning for undefined endpoints a
          debug information.

0.11 2013-03-18
        - Fixed a newly introduced relative path bug.

0.10 2013-03-18
        - Partially reimplemented due to
	  a bug with mounted apps.
	- Update dependencies.

0.09 2013-03-16
        - Update year.
	- Documentation tweaks.
	- Change title of endpoints command.
	- Small bugfix in port setting.

0.08 2012-11-19
        - Small bugfix regarding empty queries.

0.07 2012-11-13
        - Small bugfix regarding warnings.

0.06 2012-11-03
        - Small improvement regarding no-placeholder URIs.
        - Small improvements of the documentation.

0.05 2012-10-30
        - Add setting function to endpoint helper.
	- Small improvements of the test suite.

0.04 2012-10-28
        - Small improvements/corrections of the documentation.

0.03 2012-10-28
        - Corrections regarding meta data.
	- Small improvements of the documentation.

0.02 2012-10-28
        - Small improvements/corrections of the documentation.
	- Small code improvements.

0.01 2012-10-28
        - Separation from Sojolicious package.
        - Initial submission to GitHub.
        - Initial submission to CPAN.